--- a/css/style.css
+++ b/css/style.css
@@ -35,18 +35,6 @@ img {
   max-width: 100%;
   height: auto;
 }
-li{
-  list-style-type: none;
-}
-h2{
-  color: var(--basic-blue);
-  font-size: 30px;
-  line-height: 30px;
-  text-transform: uppercase;
-}
-fieldset{
-  border: none;
-}
 
 /* Header */
 .main-header{
@@ -77,6 +65,9 @@ line-height: 24px;
 }
 .main-nav {
   background-color: var(--basic-blue);
+}
+.header-nav li{
+  list-style-type: none;
 }
 .header-nav a {
   color: var(--basic-white);
@@ -134,24 +125,24 @@ line-height: 36px;
   line-height: 24px;
   }
 .category-materials{
-  background: url(img/icons/icon-1.svg) no-repeat 90% 50%,
-              url(img/icons/new.svg) no-repeat 100% 0%;
+  background: url(../img/icons/icon-1.svg) no-repeat 90% 50%,
+              url(../img/icons/new.svg) no-repeat 100% 0%;
   background-color:  #FFBF47;
 }
 .category-tools{
-  background:#3BBCE3 url(img/icons/icon-2.svg) no-repeat 90% 50%;
+  background:#3BBCE3 url(../img/icons/icon-2.svg) no-repeat 90% 50%;
 }
 .category-technics{
-  background:#DC91D8 url(img/icons/icon-3.svg) no-repeat 90% 50%;
+  background:#DC91D8 url(../img/icons/icon-3.svg) no-repeat 90% 50%;
 }
 .category-items{
   background-color:#A9A9A9;
 }
 .category-sale{
-  background:#8ED78F url(img/icons/icon-4.svg) no-repeat 90% 50%;
+  background:#8ED78F url(../img/icons/icon-4.svg) no-repeat 90% 50%;
 }
 .category-delivery{
-  background:#FFBF47 url(img/icons/icon-5.svg) no-repeat 90% 50%;
+  background:#FFBF47 url(../img/icons/icon-5.svg) no-repeat 90% 50%;
 }
 .category-button{
   border: none;
@@ -194,6 +185,15 @@ line-height: 36px;
 .popular-header{
   background-color: var(--basic-light-yellow);
 }
+.popular-header h2{
+  color: var(--basic-blue);
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+.providers-list li{
+  list-style: none;
+}
 
 /* CATALOG / CARD */
 .catalog-item{
@@ -217,7 +217,7 @@ line-height: 36px;
   border: none;
   Width:141px;
   Height: 38px;
-  background: url(img/icons/button.svg) no-repeat;
+  background: url(../img/icons/button.svg) no-repeat;
   color: var(--basic-white);
   font-family: PT Sans;
   font-weight: bold;
@@ -225,10 +225,25 @@ line-height: 36px;
   line-height: 18px;
   text-transform: uppercase;
 }
+.catalog-list li{
+  list-style: none;
+}
 
 /* INDEX / Features */
-.features{
-  background: var(--basic-light-gray) url(img/truck.png) no-repeat 90% 90%;
+.features {
+  background: var(--basic-light-gray);
+}
+.features-description h2{
+  color: var(--basic-blue);
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+.other-description h2{
+  color: var(--basic-blue);
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
 }
 .features p{
   font-family: PT Sans;
@@ -240,13 +255,43 @@ line-height: 36px;
   font-size: 21px;
   line-height: 30px;
 }
+.delivery{
+  background: url(../img/features/truck.png) no-repeat 90% 0%;
+}
+.guarantee{
+  background: url(../img/features/guarantee.png) no-repeat 90% 0%;
+}
+.credit{
+  background: url(../img/features/credit.png) no-repeat 90% 0%;
+}
 
 /* INDEX / About-Company */
 .partners li{
   font-size: 18px;
   line-height: 24px;
+  list-style-type: none;
+
 }
+.company h2{
+  color: var(--basic-blue);
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+.contacts h2{
+  color: var(--basic-blue);
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
 /* CATALOG / Catalog */
+.catalog li{
+list-style: none;
+}
+.catalog fieldset{
+  border: none;
+}
 .breadcrumbs{
   font-family: PT Sans;
   font-size: 13px;
@@ -256,12 +301,61 @@ line-height: 36px;
 .catalog-header{
   background-color: var(--basic-light-gray);
 }
+.catalog-header h2{
+  color: var(--basic-blue);
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
 .filter{
   background-color: var(--basic-light-yellow);
   font-family: PT Sans;
   font-size: 13px;
   line-height: 18px;
   text-transform: uppercase;
+}
+.slider-container{
+  width: 220px;
+  height: 80px;
+  background-color:var(--basic-light-yellow);
+  padding: 1px;
+
+}
+.slider{
+  width: 180px;
+  height: 2px;
+  margin: 40px auto;
+  background-color: var(--basic-gray);
+  position: relative;
+}
+.slider__start-pin{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -10px;
+  border-radius: 50%;
+  background: url(../img/icons/filter-button.svg);
+  z-index: 2;
+  cursor: pointer;
+}
+.slider__finish-pin{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -10px;
+  right: 30px;
+  border-radius: 50%;
+  background:url(../img/icons/filter-button.svg);
+  z-index: 2;
+  cursor: pointer;
+}
+.slider__process{
+  position: absolute;
+  width: 150px;
+  height: 2px;
+  top: 0;
+  background-color:var(--basic-green);
+  z-index: 1;
 }
 .filter li{
   color: var(--basic-gray);
@@ -322,6 +416,12 @@ legend{
 .about-items{
   background-color: var(--basic-light-gray);
 }
+.about-items h2{
+  color: var(--basic-blue);
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
 .about-items p{
   font-family: PT Sans;
 }
@@ -335,6 +435,9 @@ legend{
   font-size: 18px;
   line-height: 24px;
 }
+.footer-nav-main li{
+  list-style-type: none;
+}
 .footer-nav-main a{
   color: var(--basic-white);
   font-size: 18px;
@@ -346,6 +449,9 @@ legend{
 .footer-nav-main a:active{
   text-decoration: none;
   opacity: 50%;
+}
+.footer-nav li{
+  list-style-type: none;
 }
 .footer-nav a{
   color: var(--basic-yellow);
@@ -383,15 +489,15 @@ legend{
   line-height: 18px;
 }
 .social-button-vk{
-  background: var(--basic-dark-blue) url(img/icons/icon-vk.svg) no-repeat;
+  background: var(--basic-dark-blue) url(../img/icons/icon-vk.svg) no-repeat;
   Height: 44px;
 }
 .social-button-fb{
-  background: var(--basic-dark-blue) url(img/icons/icon-fb.svg) no-repeat;
+  background: var(--basic-dark-blue) url(../img/icons/icon-fb.svg) no-repeat;
   Height: 44px;
 }
 .social-button-inst{
-  background: var(--basic-dark-blue) url(img/icons/icon-insta.svg) no-repeat;
+  background: var(--basic-dark-blue) url(../img/icons/icon-insta.svg) no-repeat;
   Height: 44px;
 }
 
@@ -419,7 +525,7 @@ border-top: 7px solid var(--basic-red);
   Width:21px;
   Height:21px;
   border: none;
-  background: url(img/icons/icon-close.svg) no-repeat;
+  background: url(../img/icons/icon-close.svg) no-repeat;
 }
 
 /* Modal / Map */
