--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,16 @@
   --basic-yellow:#FFD180;
   --basic-light-yellow:#F9F5F0;
 }
+/* Grid */
+.page {
+  height: 100%;
+}
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 /* Global */
 body {
   min-width: 960px;
@@ -27,6 +37,10 @@ body {
   font-weight: 400;
   color: var(--basic-black);
   background-color: var(--basic-white);
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 a {
   text-decoration: none;
@@ -39,12 +53,25 @@ img {
 /* Header */
 .main-header{
   background-color: var(--basic-light-gray);
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+}
+.main-header-bar{
+ background-color: var(--basic-middle-blue);
 }
 .header-top{
-  background-color: var(--basic-middle-blue);
+  width: 940px;
+  margin: 0 auto;
+}
+.header-for-user{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 940px;
+  margin: 0 auto;
 }
 .header-top a {
 color: var(--basic-white);
+font-weight: normal;
 font-size: 18px;
 line-height: 24px;
 }
@@ -65,6 +92,11 @@ line-height: 24px;
 }
 .main-nav {
   background-color: var(--basic-blue);
+}
+.header-nav {
+  margin: 0 auto;
+  padding: 0;
+  width: 940px;
 }
 .header-nav li{
   list-style-type: none;
@@ -109,11 +141,36 @@ line-height: 24px;
 }
 
 /* INDEX / Category */
+.category {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin-top: 60px;
+}
+.category-items {
+  grid-column: 1/3;
+  grid-row: 2/-1;
+  height: 266px;
+}
+.category-materials,
+.category-tools,
+.category-technics,
+.category-sale,
+.category-delivery {
+padding-left: 23px;
+height: 123px;
+padding-top:0;
+}
+
 .category p{
 font-weight: bold;
 font-size: 24px;
 line-height: 30px;
 color: var(--basic-white);
+padding-top:21px;
+padding-bottom:13px;
+margin: 0;
 }
 .category-items .slide-title{
 font-weight: bold;
@@ -125,24 +182,24 @@ line-height: 36px;
   line-height: 24px;
   }
 .category-materials{
-  background: url(../img/icons/icon-1.svg) no-repeat 90% 50%,
+  background: url(../img/icons/icon-1.svg) no-repeat 83% 50%,
               url(../img/icons/new.svg) no-repeat 100% 0%;
   background-color:  #FFBF47;
 }
 .category-tools{
-  background:#3BBCE3 url(../img/icons/icon-2.svg) no-repeat 90% 50%;
+  background:#3BBCE3 url(../img/icons/icon-2.svg) no-repeat 85% 50%;
 }
 .category-technics{
-  background:#DC91D8 url(../img/icons/icon-3.svg) no-repeat 90% 50%;
+  background:#DC91D8 url(../img/icons/icon-3.svg) no-repeat 86% 50%;
 }
 .category-items{
   background-color:#A9A9A9;
 }
 .category-sale{
-  background:#8ED78F url(../img/icons/icon-4.svg) no-repeat 90% 50%;
+  background:#8ED78F url(../img/icons/icon-4.svg) no-repeat 82% 50%;
 }
 .category-delivery{
-  background:#FFBF47 url(../img/icons/icon-5.svg) no-repeat 90% 50%;
+  background:#FFBF47 url(../img/icons/icon-5.svg) no-repeat 86% 50%;
 }
 .category-button{
   border: none;
@@ -161,8 +218,10 @@ line-height: 36px;
 }
 .category-button:active{
   background:rgba(169, 169, 169, 0.3);
-  border: none;
 }
+.category-button:focus {
+   outline: none; }
+
 .main-button{
   border: none;
   Width:192px;
@@ -180,19 +239,45 @@ line-height: 36px;
 .main-button:active{
   background:var(--basic-dark-red);
 }
+.main-button:focus {
+  outline: none; }
 
 /* INDEX / Popular */
+.popular{
+  display: grid;
+  grid-template-rows: min-content 1fr;
+  row-gap: 20px;
+}
 .popular-header{
   background-color: var(--basic-light-yellow);
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  padding:0 ;
+  margin-top: 60px;
 }
 .popular-header h2{
   color: var(--basic-blue);
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
+  padding-left: 30px;
+   margin-top: 31px;
+   margin-bottom: 27px;
 }
-.providers-list li{
+.popular-header button{
+  margin-top: 25px;
+  margin-right:20px;
+}
+
+.providers-list {
+  padding: 0;
+  margin: 0;
   list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap:20px;
 }
 
 /* CATALOG / CARD */
@@ -225,24 +310,33 @@ line-height: 36px;
   line-height: 18px;
   text-transform: uppercase;
 }
-.catalog-list li{
+.catalog-list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 /* INDEX / Features */
-.features {
+.features-wrapper{
   background: var(--basic-light-gray);
+  margin-top: 60px;
+}
+.features{
+  display: grid;
+  grid-template-rows: min-content 1fr;
 }
 .features-description h2{
   color: var(--basic-blue);
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
 }
 .other-description h2{
   color: var(--basic-blue);
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
 }
 .features p{
@@ -254,6 +348,9 @@ line-height: 36px;
   font-weight: bold;
   font-size: 21px;
   line-height: 30px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 .delivery{
   background: url(../img/features/truck.png) no-repeat 90% 0%;
@@ -266,26 +363,36 @@ line-height: 36px;
 }
 
 /* INDEX / About-Company */
+.about-company{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 .partners li{
   font-size: 18px;
   line-height: 24px;
   list-style-type: none;
-
 }
 .company h2{
   color: var(--basic-blue);
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
 }
 .contacts h2{
   color: var(--basic-blue);
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
 }
 
 /* CATALOG / Catalog */
+.catalog {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 20px;
+}
 .catalog li{
 list-style: none;
 }
@@ -297,15 +404,21 @@ list-style: none;
   font-size: 13px;
   line-height: 18px;
   text-transform: uppercase;
+  grid-column: 1/-1;
 }
 .catalog-header{
   background-color: var(--basic-light-gray);
+  grid-column: 1/-1;
 }
 .catalog-header h2{
   color: var(--basic-blue);
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
+}
+.catalog-section{
+  grid-column: 2/-1;
 }
 .filter{
   background-color: var(--basic-light-yellow);
@@ -319,7 +432,6 @@ list-style: none;
   height: 80px;
   background-color:var(--basic-light-yellow);
   padding: 1px;
-
 }
 .slider{
   width: 180px;
@@ -394,12 +506,14 @@ legend{
   line-height: 18px;
   text-transform: uppercase;
 }
+.pagination-list{
+  padding: 0;
+}
 .pagination-item{
   font-family: PT Sans;
   font-size: 13px;
   line-height: 18px;
   text-transform: uppercase;
-
 }
 .pagination-item a{
   color: var(--basic-black);
@@ -413,30 +527,56 @@ legend{
 }
 
 /* CATALOG / About-items */
-.about-items{
+.about-items-wrapper{
   background-color: var(--basic-light-gray);
+}
+.about-items{
+  width: 940px;
+  margin: 0 auto;
 }
 .about-items h2{
   color: var(--basic-blue);
   font-size: 30px;
   line-height: 30px;
+  font-weight: normal;
   text-transform: uppercase;
 }
 .about-items p{
   font-family: PT Sans;
 }
+.contacts iframe{
+ width:300px;
+ height: 158px;
+}
 
 /* Footer */
 .main-footer{
+  display: grid;
+  grid-template-rows:  min-content min-content;
+}
+.footer-top-wrapper{
   background-color: var(--basic-blue);
+}
+.footer-bottom-wrapper{
+  background-color: var(--basic-middle-blue);
+}
+.footer-top{
+  width: 940px;
+  margin: 0 auto;
+}
+.footer-bottom{
+  width: 940px;
+  margin: 0 auto;
 }
 .main-footer p{
   color: var(--basic-white);
   font-size: 18px;
   line-height: 24px;
 }
-.footer-nav-main li{
-  list-style-type: none;
+.footer-nav-main{
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 .footer-nav-main a{
   color: var(--basic-white);
@@ -450,8 +590,10 @@ legend{
   text-decoration: none;
   opacity: 50%;
 }
-.footer-nav li{
-  list-style-type: none;
+.footer-nav {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 .footer-nav a{
   color: var(--basic-yellow);
