--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ img {
 .main-header{
   background-color: var(--basic-light-gray);
   display: grid;
-  grid-template-rows: min-content 1fr min-content;
+  grid-template-rows: min-content min-content min-content;
 }
 .main-header-bar{
  background-color: var(--basic-middle-blue);
@@ -65,7 +65,7 @@ img {
 }
 .header-for-user{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr min-content 1fr;
   width: 940px;
   margin: 0 auto;
 }
@@ -133,12 +133,106 @@ line-height: 24px;
   color: var(--basic-black);
   font-size: 21px;
   line-height: 21px;
+  display: inline-block;
 }
 .other-links a{
   color: var(--basic-blue);
   font-size: 16px;
   line-height: 18px;
 }
+.header-login:hover .other-links a{
+  color: var(--basic-red);
+}
+.header-login:active .other-links a{
+  color: var(--basic-gray);
+}
+.header-login:hover .person{
+  color: var(--basic-middle-blue);
+}
+.header-login:active .person{
+  color: var(--basic-gray);
+}
+.header-login:hover .circle{
+  background: var(--basic-red);
+}
+.header-login:active .circle{
+  background: var(--basic-gray);
+}
+.header-login a:hover path{
+  fill: var(--basic-middle-blue);
+}
+.header-login a:active path{
+  fill: var(--basic-gray);
+}
+.other-links {
+  text-align: center;
+  margin-top: 4px;
+}
+.circle {
+display: inline-block;
+margin-left: 10px;
+margin-right: 10px;
+margin-bottom: 2px;
+width: 6px;
+height: 6px;
+background: var(--basic-blue);
+border-radius: 50%;
+}
+
+.contacts-telephone{
+  outline: var(--basic-white) solid 3px;
+  outline-offset: -3px;
+  padding-top: 5px;
+  padding-bottom:10px;
+  padding-left: 36px;
+  width: 270px;
+}
+.contacts-telephone a::before{
+  content: url(../img/icons/icon-phone.svg);
+  padding-right: 15px;
+}
+.contacts-address{
+  margin-top: 0;
+  text-align: center;
+}
+.header-for-user .description{
+padding-left: 30px;
+}
+.login{
+  height: 32px;
+  width: 121px;
+  text-align: center;
+  padding-top: 13px;
+  background-color: var(--basic-white);
+  margin-right: 7px;
+}
+.login:hover{
+  color: var(--basic-red);
+}
+.login:active{
+  color: var(--basic-gray);
+}
+.check-in:hover{
+  color: var(--basic-red);
+}
+.check-in:active{
+  color: var(--basic-gray);
+}
+.check-in{
+  height: 32px;
+  width: 150px;
+  text-align: center;
+  padding-top: 13px;
+  background-color: var(--basic-white);
+}
+.person{
+  height: 32px;
+  width: 300px;
+  text-align: center;
+  padding-top: 13px;
+  background-color: var(--basic-white);
+}
+
 
 /* INDEX / Category */
 .category {
@@ -279,6 +373,12 @@ line-height: 36px;
   grid-template-rows: 1fr 1fr;
   gap:20px;
 }
+.providers-list img:hover{
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+}
+.providers-list img:active{
+  opacity: 50%;
+}
 
 /* CATALOG / CARD */
 .catalog-item{
@@ -365,12 +465,15 @@ line-height: 36px;
 /* INDEX / About-Company */
 .about-company{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr min-content;
 }
 .partners li{
   font-size: 18px;
   line-height: 24px;
-  list-style-type: none;
+  list-style: none;
+}
+.partners{
+  padding: 0;
 }
 .company h2{
   color: var(--basic-blue);
@@ -385,6 +488,15 @@ line-height: 36px;
   line-height: 30px;
   font-weight: normal;
   text-transform: uppercase;
+}
+.bullet{
+  display: inline-block;
+  width: 25px;
+  height: 2px;
+  background-color: var(--basic-red);
+  margin: 0;
+  margin-bottom: 5px;
+  margin-right: 12px;
 }
 
 /* CATALOG / Catalog */
@@ -443,7 +555,7 @@ list-style: none;
 .slider__start-pin{
   position: absolute;
   width: 20px;
-  height: 20px;
+  height: 22px;
   top: -10px;
   border-radius: 50%;
   background: url(../img/icons/filter-button.svg);
@@ -453,7 +565,7 @@ list-style: none;
 .slider__finish-pin{
   position: absolute;
   width: 20px;
-  height: 20px;
+  height: 22px;
   top: -10px;
   right: 30px;
   border-radius: 50%;
@@ -531,6 +643,8 @@ legend{
   background-color: var(--basic-light-gray);
 }
 .about-items{
+  padding-top: 65px;
+  padding-bottom: 68px;
   width: 940px;
   margin: 0 auto;
 }
@@ -540,9 +654,12 @@ legend{
   line-height: 30px;
   font-weight: normal;
   text-transform: uppercase;
+  padding-bottom: 26px;
+  margin: 0;
 }
 .about-items p{
   font-family: PT Sans;
+  margin: 0;
 }
 .contacts iframe{
  width:300px;
