--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ border-radius: 50%;
   grid-template-rows: 1fr 1fr 1fr;
   margin-top: 60px;
 }
-.category-items {
+ .category-items {
   grid-column: 1/3;
   grid-row: 2/-1;
   height: 266px;
@@ -337,15 +337,107 @@ padding-top:21px;
 padding-bottom:13px;
 margin: 0;
 }
-.category-items .slide-title{
-font-weight: bold;
-font-size: 36px;
-line-height: 36px;
+.category-slider{
+  position: relative;
 }
-.category-items .slide-text{
+.slider-slides{
+  width: 200%;
+  transition: transform 0.8s ease;
+}
+.slider-slides img{
+  float: left;
+  width: 620px;
+  height: 266px;
+}
+.slider-inner{
+  overflow: hidden;
+}
+.category-items input[type="radio"] {
+  display: none;
+}
+.slider-controls label {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border: 2px solid white;
+  border-radius: 50%;
+  background-color: var(--basic-white);
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.radio-btn1{
+  position: absolute;
+  bottom:36px;
+  left: 295px;
+  z-index: 2;
+}
+.radio-btn2{
+  position: absolute;
+  bottom:36px;
+  right: 295px;
+  z-index: 2;
+}
+.slider-controls-arrow label {
+  position: absolute;
+  display: inline-block;
+  width: 22px;
+  height: 40px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.arrow-left{
+  position: absolute;
+  top:114px;
+  z-index: 2;
+  left: 20px;
+  background-image: url(/img/icons/icon-left.svg);
+}
+.arrow-right{
+  position: absolute;
+  z-index: 2;
+  top:114px;
+  right: 20px;
+  background-image: url(/img/icons/icon-left.svg);
+  transform: rotate(180deg);
+}
+#btn-1:checked ~ .slider-controls label[for="btn-1"],
+#btn-2:checked ~ .slider-controls label[for="btn-2"] {
+  background-color:var(--basic-red);
+}
+#btn-1:checked ~ .slider-inner .slider-slides {
+  transform: translate(0);
+}
+#btn-2:checked ~ .slider-inner .slider-slides {
+  transform: translate(-620px);
+}
+.slider-text p{
+  display: inline-block;
+  margin-left: 24px;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 30px;
+  padding: 0;
+  padding-top: 26px;
+}
+.slider-text p:first-child{
+  margin-right: 379px;
+}
+
+.slider-text span{
   font-size: 18px;
-  line-height: 24px;
-  }
+  line-height: 19px;
+  font-style: normal;
+}
+.slider-text {
+  position: absolute;
+  top:0;
+  width: 1240px;
+}
+.category-slider .main-button{
+  position: absolute;
+  top:201px;
+  left:20px;
+}
 .category-materials{
   background: url(../img/icons/icon-1.svg) no-repeat 83% 50%,
               url(../img/icons/new.svg) no-repeat 100% 0%;
@@ -463,6 +555,14 @@ line-height: 36px;
   outline:1px solid #EAEAEA;
   outline-offset: -1px;
 }
+.catalog-item:hover{
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+}
+.catalog-item:hover .catalog-item-image img{
+  opacity: 0;
+  z-index: 0;
+}
+
 .catalog-item p{
   text-align: center;
 }
@@ -470,10 +570,16 @@ line-height: 36px;
   width: 220px;
 }
 .catalog-item-image{
-  margin-top: 0;
   width:184px;
   height:164px;
   margin: 0px 0px 16px 0px;
+  position: relative;
+}
+.catalog-item-image img{
+  position: absolute;
+  left:0;
+  margin-top: 1px;
+  z-index: 2;
 }
 .hidden{
   visibility: hidden;
@@ -524,6 +630,64 @@ line-height: 36px;
 .popular .catalog-item:nth-child(4n) {
   margin-right: 0;
 }
+.card-button1{
+  background-color: var(--basic-middle-green);
+  border: none;
+  border-radius: 2px;
+  width: 135px;
+  height: 38px;
+  color: var(--basic-white);
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: normal;
+  text-transform: uppercase;
+  position: absolute;
+  top:38px;
+  left:24px;
+  z-index: 1;
+  box-shadow: 0px 3px 0 0 var(--basic-dark-green);
+}
+.card-button2{
+  border: 3px solid var(--basic-middle-green);
+  border-radius: 2px;
+  width: 135px;
+  height: 38px;
+  color: var(--basic-blue);
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: normal;
+  text-transform: uppercase;
+  position: absolute;
+  top:86px;
+  left:24px;
+  z-index: 1;
+}
+.card-button1:hover{
+  background-color: var(--basic-green);
+}
+.card-button1:active{
+  background-color: var(--basic-dark-green);
+}
+.card-button1:focus{
+  outline: none;
+}
+.card-button2:hover{
+  border: 3px solid var(--basic-middle-blue);
+}
+.card-button2:active{
+  border: 3px solid var(--basic-gray);
+  background-color: var(--basic-white);
+  color: var(--basic-gray);
+}
+.card-button2:focus{
+  outline: none;
+}
+.new{
+  position: absolute;
+  top: 1px;
+  right: -17px;
+  z-index: 3;
+}
 
 /* INDEX / Features */
 .features-wrapper{
@@ -540,6 +704,12 @@ line-height: 36px;
   line-height: 30px;
   font-weight: normal;
   text-transform: uppercase;
+  padding: 0;
+  margin: 64px 0 0 0;
+}
+.features-description p{
+  padding: 0px 0 0 0;
+  margin: 25px 0 0 0;
 }
 .other-description h2{
   color: var(--basic-blue);
@@ -547,11 +717,14 @@ line-height: 36px;
   line-height: 30px;
   font-weight: normal;
   text-transform: uppercase;
+  padding: 0;
+  margin: 0;
 }
 .features p{
   font-family: PT Sans;
   font-size: 13px;
   line-height: 24px;
+
 }
 .features-list{
   font-weight: bold;
@@ -561,6 +734,14 @@ line-height: 36px;
   padding: 0;
   margin: 0;
 }
+
+.feature-item {
+  padding: 13px 0 17px 22px;
+  width: 240px;
+  background-color: var(--basic-white);
+  color: var(--basic-blue);
+}
+
 .delivery{
   background: url(../img/features/truck.png) no-repeat 90% 0%;
 }
@@ -1121,8 +1302,8 @@ hr{
 /* Modal / Write-us */
 .modal-write-us{
 background-color: var(--basic-white);
-min-Width: 620px;
-min-Height: 430px;
+Width: 620px;
+Height: 430px;
 border-top: 7px solid var(--basic-red);
 }
 .write-us-form label{
