--- a/css/style.css
+++ b/css/style.css
@@ -99,20 +99,48 @@ line-height: 24px;
   margin:0;
   display: flex;
 }
-.search-label {
-  opacity: 30%;
+.header-top form{
+  position: relative;
 }
 .header-top input{
   border:none;
   height: 42px;
-  width: 228px;
+  width: 271px;
   margin: 0;
-}
-.header-top input:focus{
-  outline-style: none;
+  margin-right: 20px;
+  background-color: var(--basic-middle-blue);
   font-size: 18px;
   line-height: 24px;
-  color: var(--basic-black);
+  cursor: pointer
+}
+.search-label{
+  position: absolute;
+  display: block;
+}
+.search-input + label{
+  background: url(../img/icons/icon-search.svg) no-repeat;
+  opacity: 30%;
+  width: 20px;
+  height: 20px;
+  top: 12px;
+  left: 20px;
+}
+.search-input:hover + label{
+  opacity: 100%;
+}
+.search-input:focus + label{
+  background: url(../img/icons/icon-search2.svg) no-repeat;
+}
+.header-top input::placeholder{
+  padding-left: 43px;
+  color:var(--basic-white);
+}
+
+.header-top input:focus{
+  padding-left: 43px;
+  outline-style: none;
+  background-color: var(--basic-white);
+  color: #000000;
 }
 .top-menue li{
   padding: 9px 25px 20px 9px;
@@ -136,11 +164,17 @@ line-height: 24px;
   opacity: 50%;
 }
 .top-menue svg{
-  padding-right: 9px;
+  padding-right: 5px;
   opacity: 30%;
 }
 .top-menue li:hover svg{
   opacity: 100%;
+}
+.top-menue a:active svg{
+  opacity: 30%;
+}
+.full-basket{
+  background-color: var(--basic-red);
 }
 .main-nav {
  width: 940px;
@@ -312,6 +346,7 @@ border-radius: 50%;
   gap: 20px;
   grid-template-rows: 1fr 1fr 1fr;
   margin-top: 60px;
+  margin-bottom: 59px;
 }
  .category-items {
   grid-column: 1/3;
@@ -390,14 +425,14 @@ margin: 0;
   top:114px;
   z-index: 2;
   left: 20px;
-  background-image: url(/img/icons/icon-left.svg);
+  background-image: url(../img/icons/icon-left.svg);
 }
 .arrow-right{
   position: absolute;
   z-index: 2;
   top:114px;
   right: 20px;
-  background-image: url(/img/icons/icon-left.svg);
+  background-image: url(../img/icons/icon-left.svg);
   transform: rotate(180deg);
 }
 #btn-1:checked ~ .slider-controls label[for="btn-1"],
@@ -459,9 +494,12 @@ margin: 0;
   background:#FFBF47 url(../img/icons/icon-5.svg) no-repeat 86% 50%;
 }
 .category-button{
+  display: block;
+  text-align: center;
+  padding-top: 10px;
   border: none;
   Width:135px;
-  Height:38px;
+  Height:28px;
   background:rgba(255, 255, 255, 0.3);
   color: var(--basic-white);
   font-family: Cuprum;
@@ -476,8 +514,6 @@ margin: 0;
 .category-button:active{
   background:rgba(169, 169, 169, 0.3);
 }
-.category-button:focus {
-   outline: none; }
 
 .main-button{
   border: none;
@@ -504,13 +540,19 @@ margin: 0;
   display: grid;
   grid-template-rows: min-content 1fr;
   row-gap: 20px;
+
+}
+.popular-item{
+  margin-bottom: 52px;
 }
 .popular-header{
   background-color: var(--basic-light-yellow);
   display: grid;
   grid-template-columns: 1fr min-content;
   padding:0 ;
-  margin-top: 60px;
+  margin: 0;
+
+
 }
 .popular-header h2{
   color: var(--basic-blue);
@@ -561,6 +603,7 @@ margin: 0;
 .catalog-item:hover .catalog-item-image img{
   opacity: 0;
   z-index: 0;
+  transition: all 0.2s ease;
 }
 
 .catalog-item p{
@@ -622,13 +665,17 @@ margin: 0;
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
-  margin: 28px 0 0 0;
+  margin: 0;
+
 }
 .catalog-section .catalog-item:nth-child(3n) {
   margin-right: 0;
 }
 .popular .catalog-item:nth-child(4n) {
   margin-right: 0;
+}
+.catalog-section .catalog-list{
+  margin-top: 20px;
 }
 .card-button1{
   background-color: var(--basic-middle-green);
@@ -692,14 +739,28 @@ margin: 0;
 /* INDEX / Features */
 .features-wrapper{
   background: var(--basic-light-gray);
-  margin-top: 60px;
+  margin-top: 62px;
 }
 .features{
   display: grid;
   grid-template-rows: min-content 1fr;
 }
+.other-features{
+  display: flex;
+  padding-bottom: 53px;
+}
+.other-description{
+  width: 598px;
+  padding-left: 80px;
+  padding-top: 43px;
+  position: relative;
+}
+.other-description p{
+  padding: 0;
+  margin: 30px 0 0 0;
+}
+
 .features-description h2{
-  color: var(--basic-blue);
   font-size: 30px;
   line-height: 30px;
   font-weight: normal;
@@ -709,7 +770,7 @@ margin: 0;
 }
 .features-description p{
   padding: 0px 0 0 0;
-  margin: 25px 0 0 0;
+  margin: 25px 0 26px 0;
 }
 .other-description h2{
   color: var(--basic-blue);
@@ -731,25 +792,70 @@ margin: 0;
   font-size: 21px;
   line-height: 30px;
   list-style: none;
-  padding: 0;
+  padding: 45px 0 45px 0;
   margin: 0;
+  position: relative;
 }
-
-.feature-item {
-  padding: 13px 0 17px 22px;
+.features-list::after{
+  content: "";
+  position: absolute;
+  background-image: url(../img/features/line.png);
+  width: 10px;
+  height: 279px;
+  top:0px;
+  left: 252px;
+}
+.features-list input{
+  display: none;
+}
+.feature-item-input +label{
+  padding: 13px 0 19px 22px;
+  color: var(--basic-white);
   width: 240px;
-  background-color: var(--basic-white);
+  display: block;
+  background-color: var(--basic-blue);
+  box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069;
+  cursor: pointer;
+}
+.feature-item-input:hover +label{
+  background-color: var(--basic-middle-blue);
+  box-shadow:0px 1px 0px #293449, inset 0px 1px 0px #405069;
+}
+.feature-item-input:checked +label{
   color: var(--basic-blue);
+  background-color: var(--basic-white);
+  box-shadow:none;
 }
 
 .delivery{
-  background: url(../img/features/truck.png) no-repeat 90% 0%;
+  position: absolute;
+  width: 598px;
+  background: url(../img/features/truck.png) no-repeat 100% 0%;
+  background-color: var(--basic-light-gray);
+  padding-bottom: 30px;
+  z-index: 1;
 }
 .guarantee{
-  background: url(../img/features/guarantee.png) no-repeat 90% 0%;
+  position: absolute;
+  width: 598px;
+  background: url(../img/features/guarantee.png) no-repeat 100% 0%;
+  background-color: var(--basic-light-gray);
+  padding-bottom: 30px;
+  z-index: 0;
 }
 .credit{
-  background: url(../img/features/credit.png) no-repeat 90% 0%;
+  position: absolute;
+  width: 598px;
+  background: url(../img/features/credit.png) no-repeat 100% 0%;
+  background-color: var(--basic-light-gray);
+  z-index: 0;
+
+}
+.credit-button{
+  width: 195px;
+  margin-top: 26px;
+  margin-bottom: 26px;
+  border-radius: 2px;
 }
 
 /* INDEX / About-Company */
@@ -960,13 +1066,61 @@ border-radius: 2px;
   padding: 0;
   margin: 0;
 }
-.filter-producer-list label{
-  padding-left: 12px;
-}
 .filter-producer legend{
   padding-top: 7px;
   margin-bottom: 16px;
 }
+.filter-producer input{
+  display: none;
+}
+.filter-producer  label{
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+  padding-left: 35px;
+
+}
+.filter-input-checkbox:checked + label::after {
+  content: "";
+  position: absolute;
+  left: 3px;
+  top: -3px;
+  width: 25px;
+  height: 25px;
+  background-image: url("../img/icons/checkbox-on.svg");
+}
+.filter-input-checkbox:checked:hover + label::after {
+  background-image: url("../img/icons/checkbox-on-hover.svg");
+}
+.filter-input-checkbox:checked:disabled + label::after {
+  background-image: url(../img/icons/checkbox-on-disabled.svg);
+}
+.filter-input-checkbox:checked:disabled + label{
+  cursor:auto;
+}
+.filter-input-checkbox:disabled + label{
+  cursor:auto;
+}
+
+.filter-input-checkbox + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -2px;
+  width:19px;
+  height: 20px;
+  border-radius: 3px;
+  border: 2px solid var(--basic-gray);
+  opacity: 68%;
+}
+.filter-input-checkbox:hover + label::before {
+  opacity: 85%;
+}
+.filter-input-checkbox:disabled + label::before {
+  opacity: 25%;
+}
+
 .filter-energy legend{
   padding-top: 7px;
   margin-bottom: 16px;
@@ -992,12 +1146,57 @@ border-radius: 2px;
   text-transform: uppercase;
   padding-bottom: 16px;
 }
-.filter-energy-list label{
-  padding-left: 10px;
+
+.filter-energy input{
+  display: none;
 }
-
-
-
+.filter-energy label{
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+  padding-left: 35px;
+}
+.filter-input-radio +label::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -4px;
+  width:17px;
+  height: 17px;
+  border-radius: 50%;
+  border: 4px solid var(--basic-gray);
+  opacity: 68%;
+}
+.filter-input-radio:hover +label::before{
+  opacity: 85%;
+}
+.filter-input-radio:disabled +label::before{
+  opacity: 25%;
+}
+.filter-input-radio:checked +label::after{
+  content: "";
+  position: absolute;
+  left: 8px;
+  top: 4px;
+  width:9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--basic-gray);
+  opacity: 68%;
+}
+.filter-input-radio:checked:hover +label::after{
+  opacity: 85%;
+}
+.filter-input-radio:checked:disabled +label::after{
+  opacity: 25%;
+}
+.filter-input-radio:checked:disabled +label{
+  cursor: auto;
+}
+.filter-input-radio:disabled +label{
+  cursor: auto;
+}
 legend{
   font-family: PT Sans;
   font-weight: bold;
@@ -1065,10 +1264,109 @@ legend{
 .sorting{
   padding: 0;
   margin: 10px 0 0 0;
+  margin-left: 70px;
   display: flex;
   flex-wrap: wrap;
+  width:400px;
 }
+.sorting-2{
+  padding: 0;
+  padding-top: 10px;
+  margin:  0;
+  display: flex;
+
+}
+.sorting li:first-child{
+  margin-right: 70px;
+}
+.sorting li:nth-child(2){
+  margin-right: 65px;
+}
+.sorting li:nth-child(3){
+  margin-right: 46px;
+}
+.sorting-2 li:nth-child(1){
+  margin-right: 21px;
+}
+#filter-price:checked ~ label{
+  color: var(--basic-red);
+  opacity: 100%;
+  border-bottom:none;
+}
+#filter-price:hover~ label{
+  opacity: 100%;
+  border-bottom:1px solid var(--basic-red);
+}
+#filter-type:checked ~ label{
+  color: var(--basic-red);
+  opacity: 100%;
+  border-bottom:none;
+}
+#filter-type:hover~ label{
+  opacity: 100%;
+  border-bottom:1px solid var(--basic-red);
+}
+#filter-function:checked ~ label{
+  color: var(--basic-red);
+  opacity: 100%;
+  border-bottom:none;
+}
+#filter-function:hover~ label{
+  opacity: 100%;
+  border-bottom:1px solid var(--basic-red);
+}
+
+#up ~ label{
+  content: url(../img/icons/icon-down-dir.svg);
+  opacity: 100%;
+  width: 11px;
+  height: 10px;
+  border-bottom:none;
+  cursor: pointer;
+}
+#up:hover ~ label{
+  content: url(../img/icons/icon-down-dir-b.svg);
+  opacity: 100%;
+  width: 11px;
+  height: 10px;
+  border-bottom:none;
+}
+#up:checked ~ label{
+  content: url(../img/icons/icon-down-dir-r.svg);
+  opacity: 100%;
+  width: 11px;
+  height: 10px;
+  border-bottom:none;
+}
+
+#down ~ label{
+  border-bottom:none;
+  opacity: 100%;
+  content: url(../img/icons/icon-down-dir.svg);
+  width: 11px;
+  height: 10px;
+  transform: rotate(180deg);
+  cursor: pointer;
+}
+#down:hover ~ label{
+  content: url(../img/icons/icon-down-dir-b.svg);
+  opacity: 100%;
+  width: 11px;
+  height: 10px;
+  border-bottom:none;
+}
+#down:checked ~ label{
+  content: url(../img/icons/icon-down-dir-r.svg);
+  opacity: 100%;
+  width: 11px;
+  height: 10px;
+  border-bottom:none;
+}
+
 .sorting input[type="radio"]{
+  display: none;
+}
+.sorting-2 input[type="radio"]{
   display: none;
 }
 .sorting label{
@@ -1077,16 +1375,17 @@ legend{
   font-size: 13px;
   line-height: 18px;
   text-transform:uppercase;
-  margin-left: 68px;
   color: var(--basic-black);
   opacity: 30%;
-  text-decoration:underline dashed var(--basic-dark-red);
+  border-bottom: 1px dotted var(--basic-red);
+  cursor: pointer;
 }
 hr{
   color: var(--basic-gray);
   opacity: 30%;
   margin-top: 25px;
 }
+
 
 
 /* CATALOG / About-items */
@@ -1303,46 +1602,134 @@ hr{
 .modal-write-us{
 background-color: var(--basic-white);
 Width: 620px;
-Height: 430px;
+min-height: 430px;
 border-top: 7px solid var(--basic-red);
+position: relative;
 }
 .write-us-form label{
   font-size: 18px;
   line-height: 24px;
 }
+.write-us-form label:first-child{
+  position: absolute;
+  top:46px;
+  left: 81px;
+}
+.write-us-form label:nth-child(2){
+  position: absolute;
+  top:46px;
+  left: 321px;
+}
+.write-us-form label:nth-child(3){
+  position: absolute;
+  top:132px;
+  left: 81px;
+}
+#user-name{
+  position: absolute;
+  top: 81px;
+  left: 80px;
+}
+#user-email {
+  position: absolute;
+  top:81px;
+  left: 320px;
+}
+#user-text{
+  position: absolute;
+  top:167px;
+  left: 80px;
+  width: 460px;
+}
 .write-us-form input{
   font-family: PT Sans;
   font-size: 13px;
   line-height: 24px;
+  padding-left: 12px;
+}
+.write-us-form input::placeholder{
   color: var(--basic-gray);
 }
+textarea{
+  padding-left: 12px;
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 24px;
+}
 .form-bottom{
+  position: absolute;
+  bottom: 0;
   background-color: #F1F1F1;
+  width: 620px;
+  height: 75px;
+  text-align: center;
+  padding-top: 37px;
+}
+.form-bottom input{
+  width: 460px;
+  height: 38px;
+  border: none;
+  background-color: var(--basic-red);
+  color: var(--basic-white);
+  font-family: Cuprum;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+.form-bottom input:focus{
+  outline: none;
 }
 .modal-close{
+  position: absolute;
+  right: 11px;
+  top:14px;
   Width:21px;
   Height:21px;
   border: none;
   background: url(../img/icons/icon-close.svg) no-repeat;
 }
+.modal-close:focus{
+  outline: none;
+  cursor: pointer;
+}
 
 /* Modal / Map */
 .modal-modal-map{
+  position: relative;
   background-color: var(--basic-gray);
+  Width: 943px;
+  Height: 450px;
+  border-top: 7px solid var(--basic-red);
+  padding: 0;
+  margin: 0;
+}
+.modal-modal-map iframe{
+  margin: 0;
+  padding: 0;
   min-Width: 943px;
   min-Height: 450px;
-  border-top: 7px solid var(--basic-red);
 }
 /* Modal / Add-product */
 .modal-add-product{
+  position: relative;
   background-color: var(--basic-white);
-  min-Width: 620px;
-  min-Height: 280px;
+  Width: 620px;
+  Height: 280px;
   border-top: 7px solid var(--basic-red);
 }
 .modal-add-product p{
- font-weight: bold;
+  position: absolute;
+  top: 66px;
+  left: 176px;
+  font-weight: bold;
   font-size: 24px;
   line-height: 30px;
+}
+.modal-add-product p::before{
+  content: url(../img/icons/icon-mark.svg);
+  position: absolute;
+  left:-95px;
+  top:-19px;
 }
 
