--- a/css/style.css
+++ b/css/style.css
@@ -507,6 +507,12 @@ margin: 0;
 .category-slider{
   position: relative;
 }
+.category-slider input:focus + .slider-controls label{
+  outline: 2px solid #005FC9;
+}
+.category-slider input:focus + .slider-controls-arrow label{
+  outline: 2px solid #005FC9;
+}
 .slider-slides{
   width: 200%;
 }
@@ -1046,6 +1052,10 @@ margin: 0;
           box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069;
   cursor: pointer;
 }
+.feature-item-input:focus +label{
+  outline: 2px solid #005FC9;
+
+}
 .feature-item-input:hover +label{
   background-color: var(--basic-middle-blue);
   -webkit-box-shadow:0px 1px 0px #293449, inset 0px 1px 0px #405069;
@@ -1156,7 +1166,6 @@ margin: 0;
   cursor: pointer;
   width:300px;
 }
-
 .bullet{
   display: inline-block;
   vertical-align:middle;
@@ -1390,7 +1399,18 @@ border-radius: 2px;
 .filter-input-checkbox:disabled + label::before {
   opacity: 25%;
 }
-
+.filter-checkbox input:focus + label::before {
+  outline: 2px solid #005FC9;
+  opacity: 100%;
+}
+.filter-checkbox input:focus + label::before {
+  outline: 2px solid #005FC9;
+  opacity: 100%;
+}
+.filter-radio input:focus + label::before{
+  outline: 2px solid #005FC9;
+  opacity: 100%;
+}
 .filter-energy legend{
   font-family: PT Sans;
   font-weight: bold;
@@ -1495,12 +1515,13 @@ border-radius: 2px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-bottom: 8px;
 }
 .pagination-list li{
-  padding: 8px 15px 8px 15px ;
+  padding: 6px 15px 6px 14px ;
   border: 1px solid #E5E5E5;
   border-radius: 2px;
   margin-right: 10px;
@@ -1513,7 +1534,7 @@ border-radius: 2px;
   border: 1px solid var(--basic-red);
 }
 .pagination-list li:last-child{
-  padding: 10px 31px 10px 31px ;
+  padding: 7px 31px 7px 31px ;
 }
 .pagination-item a{
   color: var(--basic-black);
@@ -1525,6 +1546,7 @@ border-radius: 2px;
   text-transform: uppercase;
 }
 .pagination-list li:first-child{
+  padding: 7px 16px 7px 15px;
   background-color: var(--basic-red);
   border: none;
   color: var(--basic-white);
@@ -1607,7 +1629,12 @@ border-radius: 2px;
   opacity: 100%;
   border-bottom:1px solid var(--basic-red);
 }
-
+.sorting input:focus + label{
+  outline: 2px solid #005FC9;
+}
+.sorting-2 input:focus + label{
+  outline: 2px solid #005FC9;
+}
 .up-input ~ label{
   content: url(../img/icons/icon-down-dir.svg);
   opacity: 100%;
