--- a/css/style.css
+++ b/css/style.css
@@ -990,7 +990,7 @@ margin: 0;
   padding-left: 80px;
   padding-top: 43px;
   position: relative;
-  overflow-y:scroll;
+  overflow-y: auto;
 }
 .other-description p{
   padding: 0;
