--- a/css/style.css
+++ b/css/style.css
@@ -2152,7 +2152,55 @@ display: none;
 }
 .modal-show{
   display: block;
+  animation: bounce 0.6s;
 }
+
 .block-show{
  display: block;
 }
+.modal-error {
+  animation: shake 0.6s;
+}
+
+/* Animatiom */
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes shake{
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
+
